taskprocessordeploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskprocessorsvc
spec:
  replicas: 3
  selector:
    matchLabels:
      app: taskprocessorsvc
  template:
    metadata:
      labels:
        app: taskprocessorsvc
    spec:
      containers:
        - name: taskprocessorsvc
          image: nyeineisandarsoe/taskprocessorsvc:1.0.0
          ports:
            - containerPort: 5000
          resources:
            limits:
              cpu: 500m
            requests:
              cpu: 200m
---
apiVersion: v1
kind: Service
metadata:
  name: taskprocessorsvc
  labels:
    run: taskprocessorsvc
  annotations:
    konghq.com/plugins: ratelimit
spec:
  ports:
    - port: 5000
  selector:
    app: taskprocessorsvc

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: taskservice
spec:
  replicas: 3
  selector:
    matchLabels:
      app: taskservice
  template:
    metadata:
      labels:
        app: taskservice
    spec:
      containers:
        - name: taskservice
          image: nyeineisandarsoe/taskservice:1.0.0
---
apiVersion: v1
kind: Service
metadata:
  name: taskservice
  annotations:
    konghq.com/plugins: ratelimit
spec:
  type: NodePort
  selector:
    app: taskservice
  ports:
    - port: 80
      targetPort: 5000
      nodePort: 31290
